<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="RandomAlphaViewModel"
            type="com.test.mastermindgame.RandomAlphaViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RandomAlphaActivity"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:gravity="center_vertical|center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.test.mastermindgame.EditTextValidate
                android:id="@+id/edt0"
                android:layout_width="@dimen/editTextSize"
                android:layout_height="@dimen/editTextSize"
                android:background="@drawable/editext_box"
                android:gravity="center"
                android:inputType="text"
                android:digits="@string/alpha_characters"
                android:maxLength="1"
                android:text="@={RandomAlphaViewModel.edtZero}"
                app:checkEditText="@{0}"
                />

            <com.test.mastermindgame.EditTextValidate
                android:id="@+id/edt1"
                android:layout_width="@dimen/editTextSize"
                android:layout_height="@dimen/editTextSize"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_box"
                android:gravity="center"
                android:inputType="text"
                android:digits="@string/alpha_characters"
                android:maxLength="1"
                android:text="@={RandomAlphaViewModel.edtOne}"
                app:checkEditText="@{1}"/>

            <com.test.mastermindgame.EditTextValidate
                android:id="@+id/edt2"
                android:layout_width="@dimen/editTextSize"
                android:layout_height="@dimen/editTextSize"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_box"
                android:gravity="center"
                android:inputType="text"
                android:digits="@string/alpha_characters"
                android:maxLength="1"
                android:text="@={RandomAlphaViewModel.edtTwo}"
                app:checkEditText="@{2}"/>

            <com.test.mastermindgame.EditTextValidate
                android:id="@+id/edt3"
                android:layout_width="@dimen/editTextSize"
                android:layout_height="@dimen/editTextSize"
                android:layout_marginLeft="5dp"
                android:background="@drawable/editext_box"
                android:gravity="center"
                android:inputType="text"
                android:digits="@string/alpha_characters"
                android:maxLength="1"
                android:text="@={RandomAlphaViewModel.edtThree}"
                app:checkEditText="@{3}"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbxSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/checkbox_bg"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:gravity="center">

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/enter_random_alpha"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageButton
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reset_icon"
                android:background="@null"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>